--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ body, html {
   </div>
 </header>
 
-<!-- About Section -->
+<!-- About The Company -->
 <div class="w3-container" style="padding:128px 16px" id="about">
   <h3 class="w3-center">ABOUT THE COMPANY</h3>
   <p class="w3-center w3-large">Key focuses of our company</p>
@@ -78,7 +78,7 @@ body, html {
     <div class="w3-quarter">
       <i class="fa fa-diamond w3-margin-bottom w3-jumbo w3-center"></i>
       <p class="w3-large">Quality</p>
-      <p>We belive in proper repair with good parts.</p>
+      <p>We believe in proper repair with good parts.</p>
     </div>
     <div class="w3-quarter">
       <i class="fa fa-heart w3-margin-bottom w3-jumbo"></i>
@@ -108,7 +108,7 @@ body, html {
         <h3>iPhone 6s</h3>
         <h6 class="w3-opacity">$180</h6>
         <p>Space Grey 64gb Factory Unlocked</p>
-        <p>In stock</p>
+        <p class="w3-text-red">Out of stock</p>
         <p class="w3-large"><i class="fa fa-bath"></i> <i class="fa fa-phone"></i> <i class="fa fa-wifi"></i></p>
         <button class="w3-button w3-block w3-black w3-margin-bottom">Buy Now</button>
       </div>
@@ -119,7 +119,7 @@ body, html {
         <h3>iPhone 6s</h3>
         <h6 class="w3-opacity">$180</h6>
         <p>Space Grey 64gb Factory Unlocked</p>
-        <p>In stock</p>
+        <p class="w3-text-green">In stock</p>
         <p class="w3-large"><i class="fa fa-bath"></i> <i class="fa fa-phone"></i> <i class="fa fa-wifi"></i> <i class="fa fa-tv"></i></p>
         <button class="w3-button w3-block w3-black w3-margin-bottom">Buy Now</button>
       </div>
@@ -130,7 +130,7 @@ body, html {
         <h3>iPhone 6s</h3>
         <h6 class="w3-opacity">$180</h6>
         <p>Space Grey 64gb Factory Unlocked</p>
-        <p>In stock</p>
+        <p class="w3-text-green">In stock</p>
         <p class="w3-large"><i class="fa fa-bath"></i> <i class="fa fa-phone"></i> <i class="fa fa-wifi"></i> <i class="fa fa-tv"></i> <i class="fa fa-glass"></i> <i class="fa fa-cutlery"></i></p>
         <button class="w3-button w3-block w3-black w3-margin-bottom">Buy Now</button>
       </div>
@@ -184,7 +184,7 @@ body, html {
   <div class="w3-xlarge w3-section">
     <a href="https://www.google.com/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
     <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-blue w3-hover-opacity"></i>
   </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
