--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@ body, html {
 
 <!-- Store -->
 
-  <div class="w3-row-padding w3-padding-16" id="store">
+  <div class="w3-row-padding w3-padding-5" id="store">
     <h3 class="w3-center">STORE</h3>
     <div class="w3-third w3-margin-bottom">
       <img src="https://cdn.discordapp.com/attachments/353766529277362188/591138813720395776/6s.png" alt="iPhone 6s" style="width:100%">
       <div class="w3-container w3-light-grey">
-        <h3>iPhone 6s</h3>
-        <h6 class="w3-opacity">$180</h6>
-        <p>Space Grey 64gb Factory Unlocked</p>
-        <p class="w3-text-red">Out of stock</p>
+        <h3 class="w3-center">iPhone 6</h3>
+        <h4 class="w3-bold w3-center">$180</h4>
+        <p class="w3-center">Space Grey 64gb Factory Unlocked</p>
+        <p class="w3-text-red w3-center">Out of stock</p>
         <p class="w3-large"><i class="fa fa-bath"></i> <i class="fa fa-phone"></i> <i class="fa fa-wifi"></i></p>
         <button class="w3-button w3-block w3-black w3-margin-bottom">Buy Now</button>
       </div>
@@ -116,10 +116,10 @@ body, html {
     <div class="w3-third w3-margin-bottom">
       <img src="https://cdn.discordapp.com/attachments/353766529277362188/591138813720395776/6s.png" alt="iPhone 6s 2" style="width:100%">
       <div class="w3-container w3-light-grey">
-        <h3>iPhone 6s</h3>
-        <h6 class="w3-opacity">$180</h6>
-        <p>Space Grey 64gb Factory Unlocked</p>
-        <p class="w3-text-green">In stock</p>
+        <h3 class="w3-center">iPhone 6</h3>
+        <h4 class="w3-bold w3-center">$180</h4>
+        <p class="w3-center">Space Grey 64gb Factory Unlocked</p>
+        <p class="w3-text-green w3-center">In stock</p>
         <p class="w3-large"><i class="fa fa-bath"></i> <i class="fa fa-phone"></i> <i class="fa fa-wifi"></i> <i class="fa fa-tv"></i></p>
         <button class="w3-button w3-block w3-black w3-margin-bottom">Buy Now</button>
       </div>
@@ -127,10 +127,10 @@ body, html {
     <div class="w3-third w3-margin-bottom">
       <img src="https://cdn.discordapp.com/attachments/353766529277362188/591138813720395776/6s.png" alt="iPhone 6s 3" style="width:100%">
       <div class="w3-container w3-light-grey">
-        <h3>iPhone 6s</h3>
-        <h6 class="w3-opacity">$180</h6>
-        <p>Space Grey 64gb Factory Unlocked</p>
-        <p class="w3-text-green">In stock</p>
+        <h3 class="w3-center">iPhone 6</h3>
+        <h4 class="w3-bold w3-center">$180</h4>
+        <p class="w3-center">Space Grey 64gb Factory Unlocked</p>
+        <p class="w3-text-green w3-center">In stock</p>
         <p class="w3-large"><i class="fa fa-bath"></i> <i class="fa fa-phone"></i> <i class="fa fa-wifi"></i> <i class="fa fa-tv"></i> <i class="fa fa-glass"></i> <i class="fa fa-cutlery"></i></p>
         <button class="w3-button w3-block w3-black w3-margin-bottom">Buy Now</button>
       </div>
@@ -184,7 +184,7 @@ body, html {
   <div class="w3-xlarge w3-section">
     <a href="https://www.google.com/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
     <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-blue w3-hover-opacity"></i>
+    <i class="fa fa-twitter w3-hover-opacity"></i>
   </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
@@ -198,6 +198,21 @@ function onClick(element) {
   captionText.innerHTML = element.alt;
 }
 
+// Toggle between showing and hiding the sidebar when clicking the menu icon
+var mySidebar = document.getElementById("mySidebar");
+
+function w3_open() {
+  if (mySidebar.style.display === 'block') {
+    mySidebar.style.display = 'none';
+  } else {
+    mySidebar.style.display = 'block';
+  }
+}
+
+// Close the sidebar with the close button
+function w3_close() {
+    mySidebar.style.display = "none";
+}
 </script>
 
 </body>
