--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<head>
+<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+</head>
+
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
@@ -26,6 +31,7 @@ body, html {
   padding: 16px;
 }
 </style>
+
 <body>
 
 <!-- Navbar (sit on top) -->
@@ -109,7 +115,7 @@ body, html {
         <h4 class="w3-bold w3-center">$180</h4>
         <p class="w3-center">Space Grey 64gb Factory Unlocked</p>
         <p class="w3-text-red w3-center">Out of stock</p>
-        <p class="w3-large"><i class="fa fa-bath"></i> <i class="fa fa-phone"></i> <i class="fa fa-wifi"></i></p>
+        <p class="w3-large w3-center"><i class="fa fa-phone"></i> <i class="fa fa-wifi"></i></p>
         <button class="w3-button w3-block w3-black w3-margin-bottom">Buy Now</button>
       </div>
     </div>
@@ -120,7 +126,7 @@ body, html {
         <h4 class="w3-bold w3-center">$180</h4>
         <p class="w3-center">Space Grey 64gb Factory Unlocked</p>
         <p class="w3-text-green w3-center">In stock</p>
-        <p class="w3-large"><i class="fa fa-bath"></i> <i class="fa fa-phone"></i> <i class="fa fa-wifi"></i> <i class="fa fa-tv"></i></p>
+        <p class="w3-large w3-center"><i class="fa fa-phone"></i> <i class="fa fa-wifi"></i></p>
         <button class="w3-button w3-block w3-black w3-margin-bottom">Buy Now</button>
       </div>
     </div>
@@ -131,7 +137,7 @@ body, html {
         <h4 class="w3-bold w3-center">$180</h4>
         <p class="w3-center">Space Grey 64gb Factory Unlocked</p>
         <p class="w3-text-green w3-center">In stock</p>
-        <p class="w3-large"><i class="fa fa-bath"></i> <i class="fa fa-phone"></i> <i class="fa fa-wifi"></i> <i class="fa fa-tv"></i> <i class="fa fa-glass"></i> <i class="fa fa-cutlery"></i></p>
+        <p class="w3-large w3-center"><i class="fa fa-phone"></i> <i class="fa fa-wifi"></i></p>
         <button class="w3-button w3-block w3-black w3-margin-bottom">Buy Now</button>
       </div>
     </div>
@@ -186,7 +192,7 @@ body, html {
     <i class="fa fa-instagram w3-hover-opacity"></i>
     <i class="fa fa-twitter w3-hover-opacity"></i>
   </div>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+  <p>Check out <a href="https://www.ifixit.com" title="W3.CSS" target="_blank" class="w3-hover-text-green">ifixit</a>!</p>
 </footer>
  
 <script>
