--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <head>
 <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 </head>
-
+/* https://cdn.discordapp.com/attachments/353766529277362188/591445781718761482/favicon.png */
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
@@ -69,7 +69,7 @@ body, html {
     <span class="w3-large">Right at your School</span>
     <p><a href="#contact" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Don't delay, get a repair today!</a></p>
   </div> 
-  <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
+  <div class="w3-display-bottomleft w3-text-black w3-large" style="padding:24px 48px">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
     <i class="fa fa-twitter w3-hover-opacity"></i>
@@ -169,7 +169,7 @@ body, html {
 <!-- Contact Section -->
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
   <h3 class="w3-center">CONTACT</h3>
-  <p class="w3-center w3-large">Let's get in touch. Send us a message:</p>
+  <p class="w3-center w3-large">Let's get in touch. Feel free to request and ask about repairs and aftermarket modifications.</p>
   <div style="margin-top:48px">
     <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> The Bronx High School of Science</p>
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> goodfixez@gmail.com</p>
@@ -192,7 +192,7 @@ body, html {
     <i class="fa fa-instagram w3-hover-opacity"></i>
     <i class="fa fa-twitter w3-hover-opacity"></i>
   </div>
-  <p>Check out <a href="https://www.ifixit.com" title="W3.CSS" target="_blank" class="w3-hover-text-green">ifixit</a>!</p>
+  <p>Check out <a href="https://www.ifixit.com" title="W3.CSS" target="_blank" class="w3-hover-text-blue">ifixit</a>!</p>
 </footer>
  
 <script>
