--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <head>
-<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+<link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/353766529277362188/591445781718761482/favicon.png"/>
 </head>
-/* https://cdn.discordapp.com/attachments/353766529277362188/591445781718761482/favicon.png */
+
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
