--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>BxSciRepair</title>
+<title>iModsPro</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <head>
-<link rel="shortcut icon" type="image/png" href="https://cdn.discordapp.com/attachments/353766529277362188/591445781718761482/favicon.png"/>
+<link rel="shortcut icon" type="image/png" href=""/>
 </head>
 
 <style>
@@ -38,7 +38,6 @@ body, html {
 <div class="w3-top" style="margin:auto">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
     <a href="#home" class="w3-bar-item w3-button w3-wide"></a> 
-    <img src = "https://cdn.discordapp.com/attachments/353766529277362188/591040049492131851/yes.png"
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
@@ -66,12 +65,12 @@ body, html {
   <div class="w3-display-left w3-text-white" style="padding:48px">
     <span class="w3-jumbo w3-hide-small">Affordable & Quality Repair</span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">Affordable & Quality Repair</span><br>
-    <span class="w3-large">Right at your School</span>
+    <span class="w3-large">Anywhere in the USA</span>
     <p><a href="#contact" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Don't delay, get a repair today!</a></p>
   </div> 
   <div class="w3-display-bottomleft w3-text-black w3-large" style="padding:24px 48px">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <a href="https://www.instagram.com/bxsci_device_repair/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
     <i class="fa fa-twitter w3-hover-opacity"></i>
   </div>
 </header>
@@ -171,7 +170,7 @@ body, html {
   <h3 class="w3-center">CONTACT</h3>
   <p class="w3-center w3-large">Let's get in touch. Feel free to request and ask about repairs and aftermarket modifications.</p>
   <div style="margin-top:48px">
-    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> The Bronx High School of Science</p>
+    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i>Ur_Mum</p>
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> goodfixez@gmail.com</p>
     <br>
         <button class="w3-button w3-black" type="submit">
@@ -180,7 +179,7 @@ body, html {
       </p>
     </form>
     <!-- Image of location/map -->
-    <img src="https://cdn3.creativecirclemedia.com/riverdalepress/original/1438808105_770c.jpg" style="width:100%;margin-top:48px">
+    <img src="" style="width:100%;margin-top:48px">
   </div>
 </div>
 
@@ -189,7 +188,7 @@ body, html {
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <a href="https://www.google.com/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
+    <a href="https://www.instagram.com/bxsci_device_repair/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
     <i class="fa fa-twitter w3-hover-opacity"></i>
   </div>
   <p>Check out <a href="https://www.ifixit.com" title="W3.CSS" target="_blank" class="w3-hover-text-blue">ifixit</a>!</p>
