--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<!-- bootstrap CSS -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 <head>
 <link rel="shortcut icon" type="image/png" href=""/>
 </head>
@@ -43,6 +46,7 @@ body, html {
       <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
       <a href="#store" class="w3-bar-item w3-button"><img src="https://cdn.discordapp.com/attachments/353766529277362188/591318506742480942/Webp.net-resizeimage.png"> STORE</a>
       <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
+      <a href="/ok.html" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> yes</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -58,15 +62,14 @@ body, html {
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
   <a href="#store" onclick="w3_close()" class="w3-bar-item w3-button">STORE</a>
   <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
+  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">yes</a>
 </nav>
 
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-left w3-text-white" style="padding:48px">
-    <span class="w3-jumbo w3-hide-small">Affordable & Quality Repair</span><br>
-    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Affordable & Quality Repair</span><br>
-    <span class="w3-large">Anywhere in the USA</span>
-    <p><a href="#contact" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Don't delay, get a repair today!</a></p>
+    <span class="w3-jumbo w3-hide-small">Affordable & Quality Repair</span>
+    <p><a href="#contact" class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-hover-opacity-off">Don't delay, get a repair today!</a></p>
   </div> 
   <div class="w3-display-bottomleft w3-text-black w3-large" style="padding:24px 48px">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
