--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body, html {
       <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
       <a href="#store" class="w3-bar-item w3-button"><img src="https://cdn.discordapp.com/attachments/353766529277362188/591318506742480942/Webp.net-resizeimage.png"> STORE</a>
       <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
-      <a href="/ok.html" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> yes</a>
+      <a href="http://imodspro.com/ok.html" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> yes</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
