--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body, html {
       <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
       <a href="#store" class="w3-bar-item w3-button"><img src="https://cdn.discordapp.com/attachments/353766529277362188/591318506742480942/Webp.net-resizeimage.png"> STORE</a>
       <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
-      <a href="http://imodspro.com/ok" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> yes</a>
+      <a href="http://imodspro.com/store" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> store</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -62,7 +62,8 @@ body, html {
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
   <a href="#store" onclick="w3_close()" class="w3-bar-item w3-button">STORE</a>
   <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
-  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">yes</a>
+  <a href="http://imodspro.com/store" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> store</a>
+  <a href="" onclick="w3_close()" class="w3-bar-item w3-button">yes</a>
 </nav>
 
 <!-- Header with full-height image -->
