--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@ body, html {
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
-      <a href="#store" class="w3-bar-item w3-button"><img src="https://cdn.discordapp.com/attachments/353766529277362188/591318506742480942/Webp.net-resizeimage.png"> STORE</a>
+      <a href="http://imodspro.com/store" class="w3-bar-item w3-button"><img src="https://cdn.discordapp.com/attachments/353766529277362188/591318506742480942/Webp.net-resizeimage.png"> STORE</a>
       <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
-      <a href="http://imodspro.com/store" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> store</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -60,9 +59,8 @@ body, html {
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
-  <a href="#store" onclick="w3_close()" class="w3-bar-item w3-button">STORE</a>
+  <a href="http://imodspro.com/store" onclick="w3_close()" class="w3-bar-item w3-button">STORE</a>
   <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
-  <a href="http://imodspro.com/store" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> store</a>
   <a href="" onclick="w3_close()" class="w3-bar-item w3-button">yes</a>
 </nav>
 
@@ -73,9 +71,9 @@ body, html {
     <p><a href="#contact" class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-hover-opacity-off">Don't delay, get a repair today!</a></p>
   </div> 
   <div class="w3-display-bottomleft w3-text-black w3-large" style="padding:24px 48px">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <a href="https://www.instagram.com/bxsci_device_repair/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <i class="fa fa-facebook-official w3-hover-opacity w3-text-black"></i>
+    <a href="https://www.instagram.com/bxsci_device_repair/"><i class="fa fa-instagram w3-text-black w3-hover-opacity"></i></a>
+    <i class="fa fa-twitter w3-hover-opacity w3-text-black"></i>
   </div>
 </header>
 
@@ -191,9 +189,9 @@ body, html {
 <footer class="w3-center w3-black w3-padding-64">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
-    <a href="https://www.google.com/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-    <a href="https://www.instagram.com/bxsci_device_repair/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <a href="https://www.google.com/"><i class="fa fa-facebook-official w3-text-white w3-hover-opacity"></i></a>
+    <a href="https://www.instagram.com/bxsci_device_repair/"><i class="fa fa-instagram w3-text-white w3-hover-opacity"></i></a>
+    <i class="fa fa-twitter w3-hover-opacity w3-text-white"></i>
   </div>
   <p>Check out <a href="https://www.ifixit.com" title="W3.CSS" target="_blank" class="w3-hover-text-blue">ifixit</a>!</p>
 </footer>
