--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ body, html {
     <a href="#home" class="w3-bar-item w3-button w3-wide"></a> 
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
+      <a href="http://imodspro.com/" class="w3-bar-item w3-button"><i class="fa fa-home fa fa-house"></i>HOME</a>
       <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
       <a href="http://imodspro.com/store" class="w3-bar-item w3-button"><img src="https://cdn.discordapp.com/attachments/353766529277362188/591318506742480942/Webp.net-resizeimage.png"> STORE</a>
       <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
