--- a/store/index.html
+++ b/store/index.html
@@ -121,7 +121,7 @@ body, html {
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <a href="http://imodspro.com/store" class="w3-button w3-text-black w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <a href="https://www.google.com/"><i class="fa fa-facebook-official w3-text-white w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/bxsci_device_repair/"><i class="fa fa-instagram w3-text-white w3-hover-opacity"></i></a>
