--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body, html {
 </header>
 
 <!-- About The Company -->
-<div class="w3-container" style="padding:128px 16px" id="about">
+<div class="w3-light-grey w3-container" style="padding:128px 16px" id="about">
   <h3 class="w3-center">ABOUT THE COMPANY</h3>
   <p class="w3-center w3-large">Key focuses of our company</p>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
@@ -103,45 +103,6 @@ body, html {
     </div>
   </div>
 </div>
-
-<!-- Store -->
-
-  <div class="w3-row-padding w3-padding-5" id="store">
-    <h3 class="w3-center">STORE</h3>
-    <div class="w3-third w3-margin-bottom">
-      <img src="https://cdn.discordapp.com/attachments/353766529277362188/591138813720395776/6s.png" alt="iPhone 6s" style="width:100%">
-      <div class="w3-container w3-light-grey">
-        <h3 class="w3-center">iPhone 6</h3>
-        <h4 class="w3-bold w3-center">$180</h4>
-        <p class="w3-center">Space Grey 64gb Factory Unlocked</p>
-        <p class="w3-text-red w3-center">Out of stock</p>
-        <p class="w3-large w3-center"><i class="fa fa-phone"></i> <i class="fa fa-wifi"></i></p>
-        <button class="w3-button w3-block w3-black w3-margin-bottom">Buy Now</button>
-      </div>
-    </div>
-    <div class="w3-third w3-margin-bottom">
-      <img src="https://cdn.discordapp.com/attachments/353766529277362188/591138813720395776/6s.png" alt="iPhone 6s 2" style="width:100%">
-      <div class="w3-container w3-light-grey">
-        <h3 class="w3-center">iPhone 6</h3>
-        <h4 class="w3-bold w3-center">$180</h4>
-        <p class="w3-center">Space Grey 64gb Factory Unlocked</p>
-        <p class="w3-text-green w3-center">In stock</p>
-        <p class="w3-large w3-center"><i class="fa fa-phone"></i> <i class="fa fa-wifi"></i></p>
-        <button class="w3-button w3-block w3-black w3-margin-bottom">Buy Now</button>
-      </div>
-    </div>
-    <div class="w3-third w3-margin-bottom">
-      <img src="https://cdn.discordapp.com/attachments/353766529277362188/591138813720395776/6s.png" alt="iPhone 6s 3" style="width:100%">
-      <div class="w3-container w3-light-grey">
-        <h3 class="w3-center">iPhone 6</h3>
-        <h4 class="w3-bold w3-center">$180</h4>
-        <p class="w3-center">Space Grey 64gb Factory Unlocked</p>
-        <p class="w3-text-green w3-center">In stock</p>
-        <p class="w3-large w3-center"><i class="fa fa-phone"></i> <i class="fa fa-wifi"></i></p>
-        <button class="w3-button w3-block w3-black w3-margin-bottom">Buy Now</button>
-      </div>
-    </div>
-  </div>
 
 <!-- Want a Customized Look? -->
 <div class="w3-container" style="padding:128px 16px">
@@ -175,7 +136,7 @@ body, html {
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> goodfixez@gmail.com</p>
     <br>
         <button class="w3-button w3-black" type="submit">
-          <i class="fa fa-paper-plane"></i> SEND MESSAGE
+          <i style="text-decoration: none;" class="fa fa-paper-plane"></i> SEND MESSAGE
         </button>
       </p>
     </form>
@@ -186,7 +147,7 @@ body, html {
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <a href="#home" style="text-decoration: none;" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <a href="https://www.google.com/"><i class="fa fa-facebook-official w3-text-white w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/bxsci_device_repair/"><i class="fa fa-instagram w3-text-white w3-hover-opacity"></i></a>
