--- a/store/index.html
+++ b/store/index.html
@@ -110,7 +110,7 @@ body, html {
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> goodfixez@gmail.com</p>
     <br>
         <button class="w3-button w3-black" type="submit">
-          <a href="mailto:goodfixez@gmail.com" class="w3-text-white"><i class="fa fa-paper-plane w3-text-white"></i> SEND MESSAGE</a>
+          <a href="mailto:goodfixez@gmail.com" style="text-decoration: none;" class="w3-text-white"><i class="fa fa-paper-plane w3-text-white"></i> SEND MESSAGE</a>
         </button>
       </p>
     </form>
@@ -121,7 +121,7 @@ body, html {
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
-  <a href="http://imodspro.com/store" class="w3-button w3-text-black w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <a href="http://imodspro.com/store" style="text-decoration: none;" class="w3-button w3-text-black w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <a href="https://www.google.com/"><i class="fa fa-facebook-official w3-text-white w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/bxsci_device_repair/"><i class="fa fa-instagram w3-text-white w3-hover-opacity"></i></a>
