--- a/store/index.html
+++ b/store/index.html
@@ -30,10 +30,10 @@ body, html {
     <a href="#home" class="w3-bar-item w3-button w3-wide"></a> 
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
-      <a href="http://imodspro.com/" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
-      <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
-      <a href="http://imodspro.com/store" class="w3-bar-item w3-button"><img src="https://cdn.discordapp.com/attachments/353766529277362188/591318506742480942/Webp.net-resizeimage.png"> STORE</a>
-      <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
+      <a href="http://imodspro.com/" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
+      <a href="https://imodspro.com/#about" style="text-decoration: none;" class="w3-bar-item w3-button">ABOUT</a>
+      <a href="http://imodspro.com/store" style="text-decoration: none;" class="w3-bar-item w3-button"><img src="https://cdn.discordapp.com/attachments/353766529277362188/591318506742480942/Webp.net-resizeimage.png"> STORE</a>
+      <a href="#contact" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -45,12 +45,12 @@ body, html {
 
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
-  <a href="http://imodspro.com/" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
+  <a href="javascript:void(0)" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
+  <a href="http://imodspro.com/" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
+  <a href="https://imodspro.com/#about" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">ABOUT</a>
   <a href="http://imodspro.com/store" onclick="w3_close()" class="w3-bar-item w3-button">STORE</a>
-  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
-  <a href="" onclick="w3_close()" class="w3-bar-item w3-button">yes</a>
+  <a href="#contact" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">CONTACT</a>
+  <a href="" onclick="w3_close()" style="text-decoration: none;" class="w3-bar-item w3-button">yes</a>
 </nav>
 
 <!-- Store -->
@@ -106,7 +106,7 @@ body, html {
   <h3 class="w3-center">CONTACT</h3>
   <p class="w3-center w3-large">Let's get in touch. Feel free to request and ask about repairs and aftermarket modifications.</p>
   <div style="margin-top:48px">
-    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i>Ur_Mum</p>
+    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i>Queens, New York</p>
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> goodfixez@gmail.com</p>
     <br>
         <button class="w3-button w3-black" type="submit">
@@ -124,7 +124,7 @@ body, html {
   <a href="http://imodspro.com/store" style="text-decoration: none;" class="w3-button w3-text-black w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <a href="https://www.google.com/"><i class="fa fa-facebook-official w3-text-white w3-hover-opacity"></i></a>
-    <a href="https://www.instagram.com/bxsci_device_repair/"><i class="fa fa-instagram w3-text-white w3-hover-opacity"></i></a>
+    <a href="https://www.instagram.com/iModsPro/"><i class="fa fa-instagram w3-text-white w3-hover-opacity"></i></a>
     <i class="fa fa-twitter w3-hover-opacity w3-text-white"></i>
   </div>
   <p>Check out <a href="https://www.ifixit.com" title="W3.CSS" target="_blank" class="w3-hover-text-blue">ifixit</a>!</p>
