--- a/store/index.html
+++ b/store/index.html
@@ -125,7 +125,7 @@ body, html {
   <div class="w3-xlarge w3-section">
     <a href="https://www.google.com/"><i class="fa fa-facebook-official w3-text-white w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/iModsPro/"><i class="fa fa-instagram w3-text-white w3-hover-opacity"></i></a>
-    <i class="fa fa-twitter w3-hover-opacity w3-text-white"></i>
+    <a href="https://twitter.com/iModsPro"><i class="fa fa-twitter w3-hover-opacity w3-text-white"></i></a>
   </div>
   <p>Check out <a href="https://www.ifixit.com" title="W3.CSS" target="_blank" class="w3-hover-text-blue">ifixit</a>!</p>
 </footer>
