--- a/index.html
+++ b/index.html
@@ -28,14 +28,18 @@ body, html {
   background-image: url("https://cdn.vox-cdn.com/thumbor/1aFhodAxJJEoTDsly4kgCDiPElo=/0x0:2040x1360/1200x800/filters:focal(948x690:1274x1016)/cdn.vox-cdn.com/uploads/chorus_image/image/60986247/cracked-iphone-stock-1197.0.0.jpg");
   min-height: 100%;
 }
+
+.w3-bar .w3-button {
+  padding: 16px;
+}
 </style>
 
 <body>
 
 <!-- Navbar (sit on top) -->
-<div class="w3-top" style="margin:auto">
+<div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button w3-wide"><img src="https://imodspro.com/photos/75x75 OG.png"></a> 
+    <a href="#home" class="w3-bar-item w3-button w3-wide"><img src="https://imodspro.com/photos/75x75 OG.png"></a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="http://imodspro.com/" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
