--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body, html {
   <div class="w3-display-bottomleft w3-text-black w3-large" style="padding:24px 48px">
     <i class="fa fa-facebook-official w3-hover-opacity w3-text-black"></i>
     <a href="https://www.instagram.com/bxsci_device_repair/"><i class="fa fa-instagram w3-text-black w3-hover-opacity"></i></a>
-    <i class="fa fa-twitter w3-hover-opacity w3-text-black"></i>
+    <a href="https://twitter.com/iModsPro"><i class="fa fa-twitter w3-hover-opacity w3-text-black"></i></a>
   </div>
 </header>
 
@@ -153,7 +153,7 @@ body, html {
   <div class="w3-xlarge w3-section">
     <a href="https://www.google.com/"><i class="fa fa-facebook-official w3-text-white w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/bxsci_device_repair/"><i class="fa fa-instagram w3-text-white w3-hover-opacity"></i></a>
-    <i class="fa fa-twitter w3-hover-opacity w3-text-white"></i>
+    <a href="https://twitter.com/iModsPro"><i class="fa fa-twitter w3-hover-opacity w3-text-white"></i></a>
   </div>
   <p>Check out <a href="https://www.ifixit.com" title="W3.CSS" target="_blank" class="w3-hover-text-blue">ifixit</a>!</p>
 </footer>
