--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body, html {
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button w3-wide"><img src="https://iModsPro.com/photos/iModsPro-nav.png"></a>
+    <a href="http://imodspro.com/" class="w3-bar-item w3-button w3-wide"><img src="https://iModsPro.com/photos/iModsPro-nav.png"></a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="http://imodspro.com/" style="text-decoration: none;" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
