--- a/store/index.html
+++ b/store/index.html
@@ -113,7 +113,7 @@ body, html {
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> goodfixez@gmail.com</p>
     <br>
         <button class="w3-button w3-black" type="submit">
-          <a href="mailto:goodfixez@gmail.com" class="w3-text-white"><i class="fa fa-paper-plane w3-text-white"></i> SEND MESSAGE</a>
+          <a href="mailto:goodfixez@gmail.com" class="w3-button w3-text-white"><i class="fa fa-paper-plane w3-text-white"></i> SEND MESSAGE</a>
         </button>
       </p>
     </form>
