--- a/store/index.html
+++ b/store/index.html
@@ -64,7 +64,7 @@ body, html {
 
         <div class="w3-content w3-display-container">
             <img class="Slides" src="https://cdn.discordapp.com/attachments/353766529277362188/591138813720395776/6s.png" alt="iPhone 6s" style="width:100%">
-            <img class="Slides" src="https://cdn.discordapp.com/attachments/353766529277362188/591138813720395776/6s.png" alt="iPhone 6s" style="width:100%">
+            <img class="Slides" src="https://s.appleinsider.ru/2017/09/iphone-3-750x467.jpg" alt="iPhone 6s" style="width:100%">
             <img class="Slides" src="https://cdn.discordapp.com/attachments/353766529277362188/591138813720395776/6s.png" alt="iPhone 6s" style="width:100%">
   
             <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
