--- a/store/index.html
+++ b/store/index.html
@@ -95,7 +95,7 @@ body, html {
         <h4 class="w3-bold w3-center">$170</h4>
         <p class="w3-large w3-center">Space Grey 64gb Factory Unlocked, Brand New Battery. Running on iOS 11.3.1</p>
         <p class="w3-large w3-center">CDMA+GSM</p>
-        <a href="https://imodspro.com/learn-more-about-cdma-and-gsm"><p class="w3 blue w3-center">Learn more about CDMA and GSM technologies</p></a>
+        <a href="https://imodspro.com/learn-more-about-cdma-and-gsm"><p class="w3-text-blue w3-center">Learn more about CDMA and GSM technologies</p></a>
         <p class="w3-text-green w3-center">In stock</p>
         <p class="w3-center">For more images or information, feel free to contact us!</p>
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="w3-center">
