--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ body, html {
 
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
+    <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
     <a href="http://imodspro.com/" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
     <a href="https://imodspro.com/#about" class="w3-bar-item w3-button">ABOUT</a>
     <a href="http://imodspro.com/store" class="w3-bar-item w3-button"><img src="https://cdn.discordapp.com/attachments/353766529277362188/591318506742480942/Webp.net-resizeimage.png"> STORE</a>
