--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body, html {
   </div>
 </div>
 
-<!-- Sidebar on small screens when clicking the menu icon -->
+<!-- Sidebar on small screens start-->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
     <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
     <a href="http://imodspro.com/" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
@@ -62,6 +62,7 @@ body, html {
     <a href="http://imodspro.com/store" class="w3-bar-item w3-button"><img src="https://cdn.discordapp.com/attachments/353766529277362188/591318506742480942/Webp.net-resizeimage.png"> STORE</a>
     <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
 </nav>
+<!-- Sidebar on small screens end-->
 
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
