--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@ body, html {
 
 <body>
 
+  <script type="text/javascript">
+    <!--
+    if (screen.width <= 699) {
+    document.location = "https://google.com";
+    }
+    //-->
+    </script>
+
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
@@ -105,7 +113,7 @@ body, html {
   </div>
 </div>
 
-<!-- Want a Customized Look? -->
+<!-- Want a Customized Look? Start -->
 <div class="w3-container" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
@@ -114,10 +122,11 @@ body, html {
       <p><a href="https://www.instagram.com/imodspro/" class="w3-button w3-black"><i class="fa fa-th"> </i> View Our Works</a></p>
     </div>
     <div class="w3-col m6">
-      <img class="w3-image w3-round-large" src="https://cdn.discordapp.com/attachments/353766529277362188/591114244955570186/image0.jpg" alt="Custom_Phone" width="500" height="700">
+      <img class="w3-image w3-round-large w3-right" src="https://cdn.discordapp.com/attachments/353766529277362188/591114244955570186/image0.jpg" alt="Custom_Phone" width="500" height="700">
     </div>
   </div>
 </div>
+<!-- Want a Customized Look? End -->
 
 <!-- Modal for full size images on click-->
 <div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
