--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body, html {
   <script type="text/javascript">
     <!--
     if (screen.width <= 699) {
-    document.location = "https://google.com";
+    document.location = "https://imodspro.com/m/";
     }
     //-->
     </script>
