--- a/m/index.html
+++ b/m/index.html
@@ -37,8 +37,8 @@ body, html {
 
   <script type="text/javascript">
     <!--
-    if (screen.width <= 699) {
-    document.location = "https://imodspro.com/m/";
+    if (screen.width >= 699) {
+    document.location = "https://imodspro.com";
     }
     //-->
     </script>
