--- a/m/index.html
+++ b/m/index.html
@@ -117,12 +117,12 @@ body, html {
 <div class="w3-container" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h3>Want a Customized Look?</h3>
-      <p>Look no further! It's not a skin, it's your phone!</p>
+      <h3 class ="w3-center">Want a Customized Look?</h3>
+      <p class ="w3-center">Look no further! It's not a skin, it's your phone!</p>
       <p><a href="https://www.instagram.com/imodspro/" class="w3-button w3-black"><i class="fa fa-th"> </i> View Our Works</a></p>
     </div>
     <div class="w3-col m6">
-      <img class="w3-image w3-round-large w3-right" src="https://cdn.discordapp.com/attachments/353766529277362188/591114244955570186/image0.jpg" alt="Custom_Phone" width="500" height="700">
+      <img class="w3-image w3-round-large w3-center" src="https://cdn.discordapp.com/attachments/353766529277362188/591114244955570186/image0.jpg" alt="Custom_Phone" width="500" height="700">
     </div>
   </div>
 </div>
