--- a/m/index.html
+++ b/m/index.html
@@ -146,7 +146,10 @@ body, html {
     <p class="w3-center"><i class="fa fa-envelope fa-fw w3-xxlarge"> </i> goodfixez@gmail.com</p>
     <br>
     <p class="w3-center">
-          <a href="mailto:goodfixez@gmail.com" class="w3-black w3-button w3-text-white"><i class="fa fa-paper-plane w3-text-white"></i> SEND MESSAGE</a> <a href="https://imodspro.com/mail-ins" class="w3-black w3-button w3-text-white"><i class="fa fa-envelope w3-text-white "></i>MAIL IN YOUR DEVICE</a>
+          <a href="mailto:goodfixez@gmail.com" class="w3-black w3-button w3-text-white"><i class="fa fa-paper-plane w3-text-white"></i> SEND MESSAGE</a> 
+     </p>
+     <p class="w3-center">
+          <a href="https://imodspro.com/mail-ins" class="w3-black w3-button w3-text-white"><i class="fa fa-envelope w3-text-white "></i>MAIL IN YOUR DEVICE</a>
       </p>
     </form>
     <!-- Image of location/map -->
