--- a/store/index.html
+++ b/store/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://iModsPro.com/main.css">
+<link rel="stylesheet" href="https://iModsPro.com/No-Horizontal.css">
 
 <!-- favicon -->
 <head>
@@ -26,6 +26,14 @@ body, html {
 </style>
 
 <body>
+
+  <script type="text/javascript">
+    <!--
+    if (screen.width <= 699) {
+    document.location = "https://imodspro.com/m/store";
+    }
+    //-->
+    </script>
 
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
