--- a/m/index.html
+++ b/m/index.html
@@ -137,7 +137,7 @@ body, html {
   </div>
 </div>
 
-<!-- Contact Section -->
+<!-- Contact Section Start -->
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
   <h3 class="w3-center">CONTACT</h3>
   <p class="w3-center w3-large">Let's get in touch. Feel free to request and ask about repairs and aftermarket modifications.</p>
@@ -152,10 +152,9 @@ body, html {
           <a href="https://imodspro.com/mail-ins" class="w3-black w3-button w3-text-white"><i class="fa fa-envelope w3-text-white "></i>MAIL IN YOUR DEVICE</a>
       </p>
     </form>
-    <!-- Image of location/map -->
-    <img src="" style="width:100%;margin-top:48px">
   </div>
 </div>
+<!-- Contact Section End -->
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
