--- a/m/store/index.html
+++ b/m/store/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://iModsPro.com/main.css">
+<link rel="stylesheet" href="https://iModsPro.com/No-Horizontal.css">
 
 <!-- favicon -->
 <head>
@@ -26,6 +26,14 @@ body, html {
 </style>
 
 <body>
+
+  <script type="text/javascript">
+    <!--
+    if (screen.width >= 699) {
+    document.location = "https://imodspro.com/store";
+    }
+    //-->
+    </script>
 
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
@@ -131,7 +139,7 @@ body, html {
   </div>
 </div>
 
-<!-- Contact Section -->
+<!-- Contact Section Start -->
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
   <h3 class="w3-center">CONTACT</h3>
   <p class="w3-center w3-large">Let's get in touch. Feel free to request and ask about repairs and aftermarket modifications.</p>
@@ -140,13 +148,15 @@ body, html {
     <p class="w3-center"><i class="fa fa-envelope fa-fw w3-xxlarge"> </i> goodfixez@gmail.com</p>
     <br>
     <p class="w3-center">
-          <a href="mailto:goodfixez@gmail.com" class="w3-black w3-button w3-text-white"><i class="fa fa-paper-plane w3-text-white"></i> SEND MESSAGE</a> <a href="https://imodspro.com/mail-ins" class="w3-black w3-button w3-text-white"><i class="fa fa-envelope w3-text-white "></i>MAIL IN YOUR DEVICE</a>
+          <a href="mailto:goodfixez@gmail.com" class="w3-black w3-button w3-text-white"><i class="fa fa-paper-plane w3-text-white"></i> SEND MESSAGE</a> 
+     </p>
+     <p class="w3-center">
+          <a href="https://imodspro.com/mail-ins" class="w3-black w3-button w3-text-white"><i class="fa fa-envelope w3-text-white "></i>MAIL IN YOUR DEVICE</a>
       </p>
     </form>
-    <!-- Image of location/map -->
-    <img src="" style="width:100%;margin-top:48px">
   </div>
 </div>
+<!-- Contact Section End -->
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
