--- a/m/store/index.html
+++ b/m/store/index.html
@@ -71,7 +71,7 @@ body, html {
 
        <!-- item 2 Start -->
     <!--Item 2 Slideshow Start-->
-    <div class="w3-third w3-margin-bottom">
+    <div class="w3-third w3-margin-bottom" style="width:100%">
 
       <div class="w3-content w3-display-container">
           <img class="Item1" src="https://cdn.discordapp.com/attachments/353766529277362188/597855688714092545/image1.jpg" alt="iPhone 6s" style=width:100%>
