--- a/m/store/index.html
+++ b/m/store/index.html
@@ -59,7 +59,7 @@ body, html {
 
 <!-- Store -->
 
-  <div class="w3-row-padding w3-padding-5" style="padding:128px width:100%" id="store">
+  <div class="w3-row-padding w3-padding-5" style="padding:128px" id="store">
     <h3 class="w3-center">STORE</h3>
 
        <!-- item 2 Start -->
