--- a/m/store/index.html
+++ b/m/store/index.html
@@ -29,6 +29,13 @@ body, html {
 
 <body>
 
+  <script type="text/javascript">
+    <!--
+    if (screen.width >= 699) {
+    document.location = "https://imodspro.com";
+    }
+    //-->
+    </script>
 
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
