--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ body, html {
 
   <script type="text/javascript">
     <!--
-    if (screen.width >= 699) {
-    document.location = "https://imodspro.com";
+    if (screen.width = 699) {
+    document.location = "https://imodspro.com/m/";
     }
     //-->
     </script>
@@ -120,12 +120,12 @@ body, html {
 <div class="w3-container" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h3 class ="w3-center">Want a Customized Look?</h3>
-      <p class ="w3-center">Look no further! It's not a skin, it's your phone!</p>
-      <p class="w3-center"><a href="https://www.instagram.com/imodspro/" class="w3-button w3-black"><i class="fa fa-th"> </i> View Our Works</a></p>
+      <h3>Want a Customized Look?</h3>
+      <p>Look no further! It's not a skin, it's your phone!</p>
+      <p><a href="https://www.instagram.com/imodspro/" class="w3-button w3-black"><i class="fa fa-th"> </i> View Our Works</a></p>
     </div>
     <div class="w3-col m6">
-      <img class="w3-image w3-round-large w3-center" src="https://cdn.discordapp.com/attachments/353766529277362188/591114244955570186/image0.jpg" alt="Custom_Phone" width="500" height="700">
+      <img class="w3-image w3-round-large w3-right" src="https://cdn.discordapp.com/attachments/353766529277362188/591114244955570186/image0.jpg" alt="Custom_Phone" width="500" height="700">
     </div>
   </div>
 </div>
@@ -140,7 +140,7 @@ body, html {
   </div>
 </div>
 
-<!-- Contact Section Start -->
+<!-- Contact Section -->
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
   <h3 class="w3-center">CONTACT</h3>
   <p class="w3-center w3-large">Let's get in touch. Feel free to request and ask about repairs and aftermarket modifications.</p>
@@ -149,15 +149,11 @@ body, html {
     <p class="w3-center"><i class="fa fa-envelope fa-fw w3-xxlarge"> </i> goodfixez@gmail.com</p>
     <br>
     <p class="w3-center">
-          <a href="mailto:goodfixez@gmail.com" class="w3-black w3-button w3-text-white"><i class="fa fa-paper-plane w3-text-white"></i> SEND MESSAGE</a> 
-     </p>
-     <p class="w3-center">
-          <a href="https://imodspro.com/mail-ins" class="w3-black w3-button w3-text-white"><i class="fa fa-envelope w3-text-white "></i>MAIL IN YOUR DEVICE</a>
+          <a href="mailto:goodfixez@gmail.com" class="w3-black w3-button w3-text-white"><i class="fa fa-paper-plane w3-text-white"></i> SEND MESSAGE</a> <a href="https://imodspro.com/mail-ins" class="w3-black w3-button w3-text-white"><i class="fa fa-envelope w3-text-white "></i>MAIL IN YOUR DEVICE</a>
       </p>
     </form>
   </div>
 </div>
-<!-- Contact Section End -->
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
