--- a/store/index.html
+++ b/store/index.html
@@ -28,11 +28,9 @@ body, html {
 <body>
 
   <script type="text/javascript">
-    <!--
-    if (screen.width = 699) {
+    if (screen.width < 699) {
     document.location = "https://imodspro.com/m/store";
     }
-    //-->
     </script>
 
 <!-- Navbar (sit on top) -->
