--- a/m/index.html
+++ b/m/index.html
@@ -7,7 +7,10 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- no horizonatal scrolling and smooth scrolling start -->
 <link rel="stylesheet" href="https://iModsPro.com/main.css">
+<!-- no horizonatal scrolling and smooth scrolling end -->
+
 
 <!-- favicon -->
 <head>
@@ -34,14 +37,6 @@ body, html {
 </style>
 
 <body>
-
-  <script type="text/javascript">
-    <!--
-    if (screen.width >= 699) {
-    document.location = "https://imodspro.com";
-    }
-    //-->
-    </script>
 
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
@@ -119,7 +114,7 @@ body, html {
     <div class="w3-col m6">
       <h3 class ="w3-center">Want a Customized Look?</h3>
       <p class ="w3-center">Look no further! It's not a skin, it's your phone!</p>
-      <p><a href="https://www.instagram.com/imodspro/" class="w3-button w3-black"><i class="fa fa-th"> </i> View Our Works</a></p>
+      <p><a href="https://www.instagram.com/imodspro/" class="w3-button w3-black w3-center"><i class="fa fa-th"> </i> View Our Works</a></p>
     </div>
     <div class="w3-col m6">
       <img class="w3-image w3-round-large w3-center" src="https://cdn.discordapp.com/attachments/353766529277362188/591114244955570186/image0.jpg" alt="Custom_Phone" width="500" height="700">
