--- a/store/index.html
+++ b/store/index.html
@@ -62,9 +62,9 @@ body, html {
 </nav>
 <!-- Sidebar on small screens end-->
 
-<!-- Store Start -->
+<!-- Store -->
 
-<div class="w3-light-grey w3-row-padding w3-padding-5" id="store">
+<div class="w3-row-padding w3-padding-5" id="store">
   <h3 class="w3-center" style="margin-top:48px">STORE</h3>
 
      <!-- item 1 Start -->
@@ -115,7 +115,6 @@ body, html {
   </div>
 </div>
 <!-- item 1 End -->
-    
 
 <!-- Store End -->
 
